# exp

./: .gitignore
.github/workflows/: stock-checker-publish.yml  stock-checker-test.yml
helmfile-tpl-bug/: _helper.tpl  helmfile.yml
helmfile-tpl-bug/foo/: Chart.yaml
helmfile-type-parsing-bug/: Chart.yaml  helmfile-values.yaml  helmfile.yaml.gotmpl  rendered-values.yaml
helmfile-type-parsing-bug/templates/: debug.yaml
stock-checker/: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
stock-checker/stock_checker/: __main__.py  config.py  main.py  service.py  statuspage.py
stock-checker/stock_checker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stock-checker/stock_checker/checkers/: base.py  retry.py  target.py  walmart.py
stock-checker/stock_checker/notifiers/: base.py  email.py  log.py
stock-checker/tests/: conftest.py  test_email_notifier.py  test_retry.py  test_statuspage.py  test_target_checker.py  test_walmart_checker.py
