[project]
name = "stock-checker"
version = "0.1.0"
description = "Product availability monitor for retail stores"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "curl-cffi",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
